--- a/style.css
+++ b/style.css
@@ -297,3 +297,52 @@ body {
   font-size: 3rem;
   color: var(--main-color);
 }
+
+.protfolio-box .img-box {
+  display: flex;
+  width: 100%;
+  height: 15rem;
+  border: var(--border);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.protfolio-box .img-box img {
+  width: 100%;
+  object-fit: cover;
+  transition: 0.5s ease;
+}
+.protfolio-box .img-box:hover img {
+  transform: scale(1.1);
+}
+.protfolio-box .info-box {
+  margin: 1rem 0 1.5rem;
+}
+.protfolio-box .info-box .info-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.protfolio-box .info-box .info-title h3{
+  font-size: 1.3rem;
+}
+
+.protfolio-box .info-box .info-title a{
+  display: flex;
+  align-items: center;
+  color: var(--main-color);
+}
+.protfolio-box .info-box .info-title a i{
+  margin-left: .3rem;
+}
+.protfolio-box .info-box p:nth-of-type(1){
+  font-weight: 600;
+}
+.protfolio-box .btn-box{
+  display: flex;
+  justify-content: center;
+}
+.protfolio-box .btn-box .btn{
+  margin: 0 1.15rem;
+}
