--- a/style.css
+++ b/style.css
@@ -324,25 +324,87 @@ body {
   margin-bottom: 1rem;
 }
 
-.protfolio-box .info-box .info-title h3{
+.protfolio-box .info-box .info-title h3 {
   font-size: 1.3rem;
 }
 
-.protfolio-box .info-box .info-title a{
+.protfolio-box .info-box .info-title a {
   display: flex;
   align-items: center;
   color: var(--main-color);
 }
-.protfolio-box .info-box .info-title a i{
-  margin-left: .3rem;
+.protfolio-box .info-box .info-title a i {
+  margin-left: 0.3rem;
 }
-.protfolio-box .info-box p:nth-of-type(1){
+.protfolio-box .info-box p:nth-of-type(1) {
   font-weight: 600;
 }
-.protfolio-box .btn-box{
+.protfolio-box .btn-box {
   display: flex;
   justify-content: center;
 }
-.protfolio-box .btn-box .btn{
+.protfolio-box .btn-box .btn {
   margin: 0 1.15rem;
+}
+.contact-box {
+  text-align: center;
+}
+
+.contact-box .field {
+  width: 100%;
+  background: transparent;
+  border: var(--border);
+  border-radius: 0.3rem;
+  padding: 0.8rem;
+  font-size: 1rem;
+  color: var(--text-color);
+  margin-bottom: 1.5rem;
+}
+
+.contact-box .field::placeholder {
+  color: var(--text-color);
+}
+
+.contact-box textarea {
+  resize: none;
+  height: 15rem;
+}
+.contact-box .btn {
+  cursor: pointer;
+}
+
+.back-profile {
+  position: absolute;
+  bottom: 1.2rem;
+  right: 2rem;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: 0.3rem;
+  font-size: 1.1rem;
+  color: var(--main-color);
+  display: inline-flex;
+  transition: 0.5s;
+  justify-content: center;
+  align-items: center;
+}
+.back-profile:hover {
+  background: var(--main-color);
+  color: var(--white-color);
+}
+.back-profile p {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) scale(0.5);
+  font-size: 1rem;
+  opacity: 0;
+  transition: 0.5s;
+  color: var(--main-color);
+}
+.back-profile:hover p {
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+  top: -1.8rem;
 }
