add javaScript Code  and animation

--- a/style.css
+++ b/style.css
@@ -26,13 +26,29 @@ body {
   min-height: 100vh;
   background: var(--bg-color);
   color: var(--text-color);
+  overflow: hidden;
 }
 .wrapper {
   position: relative;
   width: 66rem;
   height: 45rem;
   padding: 2rem;
+  perspective: 250rem;
+  animation: show-animate 2s forwards;
 }
+
+@keyframes show-animate {
+  0%,
+  30% {
+    opacity: 0;
+    transform: rotate(-20deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+}
+
 .cover {
   position: absolute;
   top: 0;
@@ -48,6 +64,10 @@ body {
 .cover.cover-left {
   z-index: -1;
 }
+.cover.cover-right {
+  z-index: 100;
+    transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
 .cover.cover-right.turn {
   transform: rotateY(180deg);
 }
@@ -56,6 +76,8 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  /* جعل التقليب ثلاثي الابعاد */
+  perspective: 250rem;
 }
 
 .book .book-page {
@@ -67,6 +89,11 @@ body {
   display: flex;
   padding: 2rem;
 }
+
+.book-page.page-left{
+  box-shadow: -.6rem .6rem .6rem rgba(0, 0, 0, 0.1);
+}
+
 .profile-page {
   display: flex;
   flex-direction: column;
@@ -148,6 +175,8 @@ body {
   right: 0;
   transform-style: preserve-3d;
   transform-origin: left;
+  /* مسئول عن تقليب الصفحات يمين وشمال */
+  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 .book-page.page-right.turn {
   transform: rotateY(-180deg);
